fix navigation on mobile and added smooth navigation in JS

--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ body {
   }
 }
 .header {
+  position: relative;
   background-color: #f1f3f5;
   padding: 1rem 2rem;
   display: flex;
@@ -117,8 +118,9 @@ body {
   pointer-events: none;
   visibility: hidden;
   background-color: rgba(255, 255, 255, 0.97);
-  transition: 0.5s transform;
   z-index: 100;
+  backdrop-filter: blur(10px);
+  transition: all 0.5s;
 }
 .navigation__list {
   list-style: none;
@@ -624,7 +626,7 @@ body {
   color: #fcc419;
   font-size: 2.5rem;
   padding: 1rem;
-  z-index: 100;
+  z-index: 10;
 }
 .testimonials__button--left {
   left: 3%;
