--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,4 +1,5 @@
 .header {
+	position: relative;
 	background-color: $background-color-light;
 	padding: 1rem 2rem;
 	display: flex;
