--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -12,8 +12,9 @@
 	pointer-events: none;
 	visibility: hidden;
 	background-color: rgba(255, 255, 255, 0.97);
-	transition: 0.5s transform;
 	z-index: 100;
+	backdrop-filter: blur(10px);
+	transition: all 0.5s;
 	&__list {
 		list-style: none;
 		display: flex;
