--- a/src/sass/components/_testimonials.scss
+++ b/src/sass/components/_testimonials.scss
@@ -51,7 +51,7 @@
 		color: $medium-yellow;
 		font-size: 2.5rem;
 		padding: 1rem;
-		z-index: 100;
+		z-index: 10;
 	}
 	&__button--left {
 		left: 3%;
